# Nyx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
NyxEngine/: CMakeLists.txt
NyxEngine/include/: Config.h
NyxEngine/include/nyx/core/: assert.h  config.h
NyxEngine/include/nyx/core/logging/: log.h
NyxEngine/src/core/logging/: log.cpp
NyxTestbed/: CMakeLists.txt
NyxTestbed/src/: main.cpp
